tests/parsing/smtlib/v2.7/errors/027_let_unopened_var_binding_list_1.smt2
(set-logic ALL)
(assert (let _ true))
